# chronicle-bulk-data-downloader

./: .gitignore  ChronicleBulkDataDownloader.spec  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: build-exe.yml  test.yml
chronicle_bulk_data_downloader/: __init__.py  __main__.py  constants.py  download_worker.py  enums.py  utils.py
chronicle_bulk_data_downloader/cli/: cli.py
chronicle_bulk_data_downloader/core/: __init__.py  callbacks.py  config.py  downloader.py  exceptions.py
chronicle_bulk_data_downloader/gui/: __init__.py  main_window.py
tests/: conftest.py  test_cli.py  test_config.py  test_constants.py  test_downloader.py  test_enums.py  test_exceptions.py  test_imports.py  test_integration.py  test_platform_paths.py  test_utils.py
