[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-bulk-data-downloader"
version = "1.0.0"
description = "A tool for downloading Chronicle data in bulk via GUI or CLI"
readme = "README.md"
authors = [
    {name = "Uzair Alam", email = "uzair.alam@bcm.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
keywords = ["chronicle", "data-download", "bulk-download", "research"]

dependencies = [
    "aiofiles>=25.1.0",
    "httpx[http2]>=0.28.1",
    "regex>=2025.11.3",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.10.0",
]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "basedpyright>=1.29.0",
    "ruff>=0.14.5",
]

[project.urls]
Homepage = "https://github.com/uzaira0/chronicle-bulk-data-downloader"
Issues = "https://github.com/uzaira0/chronicle-bulk-data-downloader/issues"

[project.scripts]
chronicle-downloader-cli = "chronicle_bulk_data_downloader.cli.cli:main"
chronicle-downloader-gui = "chronicle_bulk_data_downloader.gui:main"

[tool.setuptools.packages.find]
include = ["chronicle_bulk_data_downloader*"]

[tool.setuptools.package-data]
chronicle_bulk_data_downloader = ["*.json", "*.png"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportMissingImports = false
reportMissingModuleSource = false
reportUntypedBaseClass = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportPrivateUsage = false
reportUnnecessaryComparison = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
